@@ -4,80 +4,17 @@
 <xpage:title>About the Repository</xpage:title>
 <xpage:body>
 
-<p>This repository is running on GNU EPrints open repository software, a freely distributable repository system available from <a href="http://software.eprints.org/">software.eprints.org</a>. </p>
+<p>This site is running <a href="{$config{base_url}}/eprints/">GNU EPrints</a> / revision: <epc:print expr="$config{version}" />. <a href="{$config{base_url}}/eprints/">More Information</a></p>
 
-<p>Other institutions are invited (and encouraged) to set up their own open repositories for author <a href="http://www.eprints.org/self-faq/">self-archiving</a>, using the freely-distributable <a href="http://software.eprints.org/">GNU EPrints software</a> used at this site.</p>
+<ul>
+<li>More Information about EPrints</li></ul>
+
+<p>A
 
 <h2>Contact Information</h2>
 
 <p>Any correspondence concerning this specific repository should be sent to <a href="mailto:{$config{adminemail}}"><epc:print expr="$config{adminemail}" /></a>.</p>
 
-<h2>About this software</h2>
-<p>This site is running GNU EPrints / revision: <epc:print expr="$config{version}" /></p>
-<p>GNU EPrints is free software developed by the University of Southampton, England.</p>
-<p>For more information see <a href="http://eprints.org/">eprints.org</a> and <a href="http://software.eprints.org/">software.eprints.org</a></p>
-
-
-<h2>Technologies employed and supported:</h2>
-
-<p><strong>Powered by:</strong>
-<a href="http://www.mysql.com/">MySQL</a>,
-<a href="http://www.apache.org/">Apache Webserver</a>,
-<a href="http://www.perl.org/">Perl</a>,
-<a href="http://perl.apache.org/">mod_perl</a>,
-<a href="http://www.w3c.org/XML/">XML</a>,
-<a href="http://www.w3c.org/DOM/">DOM</a>,
-<a href="http://paracite.eprints.org/">ParaCite</a>,
-<a href="http://software.eprints.org/">GNU EPrints</a>.
-</p>
-
-
-<p><strong>Supports:</strong>
-<a href="http://www.openarchives.org/">Open Archives Initiative Protocol for Metadata Harvesting</a>,
-<a href="vlit.html">VLit Transclusions</a>,
-<a href="http://www.w3.org/MarkUp/">Valid XHTML</a>,
-<a href="http://jigsaw.w3.org/css-validator/">Valid CSS</a>.
-</p>
-
-<p><strong>Part of:</strong>
-<a href="http://www.gnu.org/">The GNU Project</a>.
-</p>
-
-<div align="center">
-<table bgcolor="#ffffff" border="0" cellpadding="8" cellspacing="0"><tr><td>
-<a href="http://www.mysql.com/"><img src="{$config{base_url}}/images/poweredbymysql-167.png" border="0" alt="Powered by MySQL" align="middle"/></a>
-<a href="http://www.openarchives.org/"><img src="{$config{base_url}}/images/OA100.png" border="0" alt="The Open Archives Initiative" align="middle"/></a>
-<a href="http://www.gnu.org/"><img src="{$config{base_url}}/images/gnu-head-sm.jpg" border="0" alt="Part of the GNU Project" align="middle" width="129" height="122"/></a>
-</td></tr><tr><td>
-<a href="http://tardis.eprints.org/"><img src="{$config{base_url}}/images/tardis-logo.png" border="0" alt="Tardis Project" align="middle"/></a>
-<a href="http://software.eprints.org/"><img src="{$config{base_url}}/images/logo_small.png" border="0" alt="GNU EPrints" align="middle"/></a>
-<a href="vlit.html"><img src="{$config{base_url}}/images/XanaduVLit.png" border="0" alt="Powered by Vlit" align="middle"/></a>
-</td></tr></table>
-</div>
-
-<epc:phrase ref="ruler" />
-
-<h2>Credits</h2>
-<p><a href="http://www.ecs.soton.ac.uk/info/people/cjg">Christopher Gutteridge</a> - Designer and coder of <em>EPrints version 2</em>.</p>
-<p>Tim Brody - Programmer, code repository administrator.</p>
-<p>Mike Jewell - Pre-release testing. The initial versions of scripts for creating and installing an <em>EPrints v2</em> package. Some coding assistance.</p>
-<p>Harry Mason - Testing. Document to text conversion wrappers. Document icons.</p>
-<p>Robert Tansley - Creator of <em>EPrints 1</em> on which <em>EPrints 2</em> is based.</p>
-<p>Al Riddoch &lt;<a href="mailto:ajr@ecs.soton.ac.uk">ajr@ecs.soton.ac.uk</a>&gt; - Assistance in writing the "configure" script for the installer.</p>
-<p><a href="http://www.ecs.soton.ac.uk/info/people/jmnh">Jessie Hey</a> and Pauline Simpson (as part of the <a href="http://tardis.eprints.org">TARDIS Project</a>) - Feature suggestions and contributions to the default configuration of version 2.3.</p>
-<p>Gui Power - Adapting the <a href="{$config{base_url}}/help/">online help</a> for version 2.</p>
-<p>Timothy Miles-Board - Programmer, Services manager</p>
-
-<epc:phrase ref="ruler" />
-<p align="center">
-Developed at the <a href="http://www.ecs.soton.ac.uk/">School of Electronics and Computer Science</a> at the <a href="http://www.soton.ac.uk/">University of Southampton</a>, England.</p>
-
-<div align="center">
-<table bgcolor="#ffffff" border="0" cellpadding="8" cellspacing="0"><tr><td>
-<a href="http://www.soton.ac.uk/"><img src="{$config{base_url}}/images/uoslogo.png" border="0" alt="University of Southampton" align="top"/></a>
-<a href="http://www.ecs.soton.ac.uk/"><img src="{$config{base_url}}/images/ecslogo.png" border="0" alt="School of Electronics and Computer Science" align="top"/></a>
-</td></tr></table>
-</div>
 
 </xpage:body>
 </xpage:page>
