@@ -1,0 +1,80 @@
+<?xml version="1.0" encoding="iso-8859-1"  standalone="no"  ?>
+<!DOCTYPE page SYSTEM "entities.dtd" >
+<xpage:page xmlns="http://www.w3.org/1999/xhtml" xmlns:xpage="http://eprints.org/ep3/xpage" xmlns:epc="http://eprints.org/ep3/control">
+<xpage:title>About EPrints</xpage:title>
+<xpage:body>
+
+<h2>About this software</h2>
+
+
+<p>This site is running GNU EPrints / revision: <epc:print expr="$config{version}" />.</p>
+
+<p>GNU EPrints is free software developed at the <a href="http://www.ecs.soton.ac.uk/">School of Electronics and Computer Science</a> at the <a href="http://www.soton.ac.uk/">University of Southampton</a>, England.</p>
+
+<p>Other institutions are invited (and encouraged) to set up their own open repositories for author <a href="http://www.eprints.org/self-faq/">self-archiving</a>, using the freely-distributable <a href="http://www.eprints.org/software/">GNU EPrints software</a> used at this site.  For more information see <a href="http://eprints.org/">eprints.org</a> and <a href="http://www.eprints.org/software/">www..eprints.org/software/</a></p>
+
+<h2>Credits</h2>
+
+<h3>Lead Developer</h3>
+<ul>
+<li><a href="http://www.ecs.soton.ac.uk/info/people/cjg">Christopher Gutteridge</a></li>
+</ul>
+
+<h3>Developers</h3>
+<ul>
+<li><a href="http://www.ecs.soton.ac.uk/info/people/moj">Michael O. Jewell</a></li>
+<li><a href="http://www.ecs.soton.ac.uk/info/people/tmb">Timothy Miles-Board</a></li>
+<li><a href="http://www.ecs.soton.ac.uk/info/people/tdb01r">Tim Brody</a></li>
+<li><a href="http://www.ecs.soton.ac.uk/info/people/hjm03r">Harry Mason</a></li>
+</ul>
+
+<h3>Contributors</h3>
+<ul>
+<li><a href="http://www.ecs.soton.ac.uk/info/people/jmnh">Jessie Hey</a></li>
+<li><a href="mailto:alriddoch@zepler.org">Al Riddoch</a></li>
+<li>Gui Power</li>
+<li>Pauline Simpson</li>
+<li>Robert Tansley</li>
+</ul>
+
+<epc:phrase ref="ruler" />
+
+<h2>Technologies employed and supported:</h2>
+
+<p><strong>Powered by:</strong>
+<a href="http://www.mysql.com/">MySQL</a>,
+<a href="http://www.apache.org/">Apache Webserver</a>,
+<a href="http://www.perl.org/">Perl</a>,
+<a href="http://perl.apache.org/">mod_perl</a>,
+<a href="http://www.w3c.org/XML/">XML</a>,
+<a href="http://www.w3c.org/DOM/">DOM</a>,
+<a href="http://paracite.eprints.org/">ParaCite</a>,
+<a href="http://www.eprints.org/software/">GNU EPrints</a>.
+</p>
+
+
+<p><strong>Supports:</strong>
+<a href="http://www.openarchives.org/">Open Archives Initiative Protocol for Metadata Harvesting</a>,
+<a href="vlit.html">VLit Transclusions</a>,
+<a href="http://www.w3.org/MarkUp/">Valid XHTML</a>,
+<a href="http://jigsaw.w3.org/css-validator/">Valid CSS</a>.
+</p>
+
+<p><strong>Part of:</strong>
+<a href="http://www.gnu.org/">The GNU Project</a>.
+</p>
+
+<epc:phrase ref="ruler" />
+
+<div align="center">
+<table bgcolor="#ffffff" border="0" cellpadding="8" cellspacing="0"><tr><td>
+<a href="http://www.soton.ac.uk/"><img src="{$config{base_url}}/images/uoslogo.png" border="0" alt="University of Southampton" align="top"/></a>
+<a href="http://www.ecs.soton.ac.uk/"><img src="{$config{base_url}}/images/ecslogo.png" border="0" alt="School of Electronics and Computer Science" align="top"/></a>
+</td></tr></table>
+<p>GNU EPrints is Copyright &copy; University of Southampton, 2000-2006.</p>
+</div>
+
+
+
+</xpage:body>
+</xpage:page>
