@@ -4,23 +4,11 @@
 #
 ######################################################################
 #
-#  This file is part of GNU EPrints 2.
-#  
-#  Copyright (c) 2000-2004 University of Southampton, UK. SO17 1BJ.
-#  
-#  EPrints 2 is free software; you can redistribute it and/or modify
-#  it under the terms of the GNU General Public License as published by
-#  the Free Software Foundation; either version 2 of the License, or
-#  (at your option) any later version.
-#  
-#  EPrints 2 is distributed in the hope that it will be useful,
-#  but WITHOUT ANY WARRANTY; without even the implied warranty of
-#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-#  GNU General Public License for more details.
-#  
-#  You should have received a copy of the GNU General Public License
-#  along with EPrints 2; if not, write to the Free Software
-#  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+#  __COPYRIGHT__
+#
+# Copyright 2000-2008 University of Southampton. All Rights Reserved.
+# 
+#  __LICENSE__
 #
 ######################################################################
 
@@ -45,32 +33,6 @@ undocumented
 #
 #  $self->{foo}
 #     undefined
-#
-######################################################################
-
-######################################################################
-#
-#  EPrints Submission uploading/editing forms
-#
-######################################################################
-#
-#  This file is part of GNU EPrints 2.
-#  
-#  Copyright (c) 2000-2004 University of Southampton, UK. SO17 1BJ.
-#  
-#  EPrints 2 is free software; you can redistribute it and/or modify
-#  it under the terms of the GNU General Public License as published by
-#  the Free Software Foundation; either version 2 of the License, or
-#  (at your option) any later version.
-#  
-#  EPrints 2 is distributed in the hope that it will be useful,
-#  but WITHOUT ANY WARRANTY; without even the implied warranty of
-#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-#  GNU General Public License for more details.
-#  
-#  You should have received a copy of the GNU General Public License
-#  along with EPrints 2; if not, write to the Free Software
-#  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 ######################################################################
 
